# otel-modbus-exporter

./: .dockerignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml  docker-compose.test.yml
.github/workflows/: ci.yml  publish.yml
config/: example.yaml  modbus-simulator.json  test-native.yaml  test.yaml
config/devices/: sdm630.yaml
spec/: cli.md  collector.md  config.md  decoder.md  docker.md  e2e-testing.md  export-mqtt.md  export-otlp.md  export-prometheus.md  export-syslog.md  exporter.md  i2c.md  i3c.md  internal-metrics.md  logging.md  modbus.md  project-structure.md  publish.md  reader.md  spi.md
src/: collector.rs  collector_tests.rs  config.rs  config_tests.rs  decoder.rs  decoder_tests.rs  install.rs  internal_metrics.rs  internal_metrics_tests.rs  lib.rs  logging.rs  logging_tests.rs  main.rs  metrics.rs  metrics_tests.rs  pull.rs
src/commands/: install.rs  mod.rs  pull.rs  run.rs  show_config_tests.rs  watch.rs
src/export/: mod.rs  mqtt.rs  mqtt_tests.rs  otlp.rs  otlp_tests.rs  prometheus.rs  prometheus_tests.rs
src/exporter/: mod.rs  mqtt.rs  otlp.rs  prometheus.rs
src/exporter/mqtt/: mod.rs  mod_tests.rs
src/exporter/otlp/: mod.rs  mod_tests.rs
src/exporter/prometheus/: mod.rs  mod_tests.rs
src/i2c/: mod.rs  mod_tests.rs
src/i3c/: mod.rs  mod_tests.rs
src/reader/: decoder.rs  decoder_tests.rs  mod.rs
src/reader/i2c/: mod.rs  mod_tests.rs
src/reader/i3c/: mod.rs  mod_tests.rs
src/reader/modbus/: batch.rs  mod.rs  mod_tests.rs  rtu.rs  rtu_tests.rs  tcp.rs  tcp_tests.rs
src/reader/modbus/batch/: batch_tests.rs
src/reader/spi/: mod.rs  mod_tests.rs
src/spi/: mod.rs  mod_tests.rs
tests/: e2e_i2c.rs  e2e_i3c.rs  e2e_modbus.rs  e2e_modbus_rtu.rs  e2e_otlp.rs  integration_test.rs
tests/common/: mod.rs
tests/e2e/: run.sh
