[package]
name = "modbus-exporter"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "A Modbus RTU/TCP to OpenTelemetry metrics exporter with Prometheus scrape endpoint"
repository = "https://github.com/r12f/modbus-exporter"
homepage = "https://github.com/r12f/modbus-exporter"
keywords = ["modbus", "opentelemetry", "prometheus", "metrics", "exporter"]
categories = ["network-programming"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-modbus = "0.14"
tokio-serial = "5.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
opentelemetry_sdk = "0.27"
prometheus-client = "0.23"
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
dashmap = "6"
humantime-serde = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-util = "0.7"
bytes = "1"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
